https://www.codewars.com/kata/tip-calculator